# agent-collab

./: .editorconfig  .gitattributes  .gitignore  JIZI_INTELLIGENCE_REVIEW.md  JIZI_INTELLIGENCE_UPGRADE_REPORT.md  MASTER_AGENT_PROMPT.md  README.md  qa-test-cases.md  setup-dev-env.bat  setup-dev-env.ps1  start-preflight.ps1  个人开发习惯.md  交接注意事项.md  全期开发进度统计.md  启动应用.bat  小说家与工作台集成规划.md  开发清单.md  当前情况与后续开发计划.md  技术评审报告.md  施工清单.md  环境配置器.bat  软件开发全记录.md  项目审查与整改建议_2026-07-10.md  项目审计报告.md
app/: index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
app/public/: guide.html
app/scripts/: dev-server.mjs
app/src/: App.css  App.hydration.test.ts  App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  license.txt  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/installer/: installer.nsi
app/src-tauri/src/: lib.rs  python_manager.rs  storage.rs
docs/: 专业包开发规范.md  审计待办-2026-07-09.md  小说家开发交接.md  开发错误总结-2026-07-07.md  模块化拆分规范.md
intro-site/: guide.html  index.html
jizi-agent-architecture/: 常驻人格.md
jizi-agent-architecture/original/: 主控agent人格.md
python/: app.py  build-dist.mjs  network_policy.py  requirements-dev.txt  requirements.txt  safe_http.py  verify-dist.mjs  verify-dist.test.mjs  web_reader.py  web_reader_policy.py
python/tests/: test_api_tester.py  test_app_body_limit.py  test_atomic_io.py  test_dynamic_registry.py  test_file_write.py  test_install_atomic.py  test_install_audit.py  test_installer.py  test_llm_calling.py  test_safe_http.py  test_web_reader.py
security/: ssrf-policy-cases.json
(+368 files in other folders)
